[package]
name = "launchtrail"
version = "0.3.0"
edition = "2021"

[dependencies]
candid = "0.10"
hex = "0.4"
hmac-sha256 = "1.1"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
serde = "1.0"
serde_bytes = "0.11"
spnr-lib = "0.3"

[target.'cfg(unix)'.dependencies]
ciborium = "0.2.2"
clap = { version = "4.5", features = ["derive"] }
ic-agent = "0.40"
ic-certificate-verification = "3.0"
leb128 = "0.2"
minicbor = "0.26.3"
serde-bytes-repr = "0.3"
serde_cbor = "0.11"
serde_json = { version = "1.0" }
tokio = { version = "1.8", features = [ "full" ] }

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[[bin]]
name = "launchtrail"
path = "./src/launchtrail.rs"

[[bin]]
name = "hello"
path = "./src/hello.rs"

[[bin]]
name = "canister-info"
path = "./src/canister-info.rs"
